fix jumpto not showing; fix map icon color in explore question list when active

--- a/app/assets/stylesheets/explore.css.less
+++ b/app/assets/stylesheets/explore.css.less
@@ -79,7 +79,7 @@
         color: #333333;
       }
       &.active{
-        a.option-mappable:hover:after{
+        a.option-mappable:after, a.option-mappable:hover:after, a.option-mappable:focus:after{
           color: #fff;
         }
       }
